<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/intro_frame2_480"
    android:orientation="vertical"
    tools:context="br.com.dev42.queridocarro.fragments.IntroFragment">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="26dp"
            android:paddingRight="26dp"
            android:paddingTop="100dp"
            android:layout_weight="3"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:gravity="">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt1_intro2"
                android:textStyle="bold"
                android:textSize="28sp"
                android:textColor="@color/colorAzulDestaque"
                android:background="@color/colorAmarelo"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt2_intro2"
                android:textStyle="bold"
                android:textSize="28sp"
                android:textColor="@color/colorAzulDestaque"
                android:gravity="center"
                android:background="@color/colorAmarelo"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt3_intro2"
                android:textStyle="bold"
                android:textSize="28sp"
                android:textColor="@color/colorAzulDestaque"
                android:background="@color/colorAmarelo"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt4_intro2"
                android:textStyle="bold"
                android:textSize="28sp"
                android:textColor="@color/colorAzulDestaque"
                android:background="@color/colorAmarelo"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt5_intro2"
                android:textStyle="bold"
                android:textSize="28sp"
                android:textColor="@color/colorAzulDestaque"
                android:background="@color/colorAmarelo"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt6_intro2"
                android:textStyle="bold"
                android:textSize="28sp"
                android:textColor="@color/colorAzulDestaque"
                android:background="@color/colorAmarelo"
                android:layout_marginTop="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt7_intro2"
                android:textStyle="bold"
                android:textSize="28sp"
                android:textColor="@color/colorAzulDestaque"
                android:background="@color/colorAmarelo" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt8_intro2"
                android:textStyle="bold"
                android:textSize="28sp"
                android:textColor="@color/colorAzulDestaque"
                android:background="@color/colorAmarelo"/>
        </LinearLayout>

</LinearLayout>
